src/objects/Product_Bundle__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Lines__c</fullName>
        <label>Number of Lines</label>
        <summaryForeignKey>Product_Bundle_Line__c.Product_Bundle__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Product_Bundle_Number__c</fullName>
        <displayFormat>PB-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Product Bundle Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>PMD_Program__c.Program_Status__c</field>
                <operation>equals</operation>
                <value>Active, On Hold, Shipping</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PMD_Program__c</referenceTo>
        <relationshipLabel>Product Bundles</relationshipLabel>
        <relationshipName>Product_Bundles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bluetooth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Music</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personalization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Product Bundle</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Type__c</columns>
        <columns>Program__c</columns>
        <columns>Number_of_Lines__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Bundles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>